--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 /.vscode
-/all.csv
-/bigclass.csv
-/duplicates.csv
-/fig1.jpg
-/fig2.jpg
-/lena.gif
-/monkey.gif
-/num2class.txt
-/rawdata.py
-/Sine.wav
-/sts.csv
-/test.xlsx
+/*.csv
+/*.png
+/*.jpg
+/*.gif
+/*.wav
+/*.xlsx
+/*.zip
+/*.py
+/*.txt
+/facepp-python-sdk-master
 /tmp
+/newblur
